--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -2,5 +2,6 @@
 @import "./mixins";
 @import "./typography";
 @import "./misc";
+@import "./login";
 @import "./sidebar-and-main-panel";
 @import "./footer";
