--- a/src/assets/scss/login.scss
+++ b/src/assets/scss/login.scss
@@ -9,5 +9,10 @@
         width: 25vw;
         height: 50vh;
         
+        .tab-content {
+            .tab-pane {
+                padding-top: 20px;
+            }
+        }
     }
 }
