--- a/PTTWeb/src/assets/scss/sidebar-and-main-panel.scss
+++ b/PTTWeb/src/assets/scss/sidebar-and-main-panel.scss
@@ -42,7 +42,7 @@
             margin-right: 15px;
 
             img{
-                width: 40px;
+                width: 30px;
                 margin-left: -3px;
                 display: block;
                 margin-top: 2px;
@@ -221,6 +221,8 @@ body > .navbar-collapse{
 
     .navbar{
         margin-bottom: 0;
+        background-color: hsla(0,0%,100%,.96);
+        border-bottom: 1px solid rgba(0,0,0,.1);
     }
 }
 
