improve the styles

--- a/PTTWeb/src/assets/scss/footer.scss
+++ b/PTTWeb/src/assets/scss/footer.scss
@@ -1,6 +1,8 @@
-.footer{    
+footer.footer{ 
+    border-top: 1px solid #e7e7e7;
     background-color: $white-color;
     line-height: $line-height;
+    height: 60px;
     
     nav > ul{
         list-style: none;
