--- a/PTTWeb/src/assets/scss/card.scss
+++ b/PTTWeb/src/assets/scss/card.scss
@@ -3,7 +3,7 @@
     -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05), 0 0 0 1px rgba(63,63,68,.1);
     box-shadow: 0 1px 2px rgba(0,0,0,.05), 0 0 0 1px rgba(63,63,68,.1);
     background-color: #fff;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
 
     .card-header {
         padding: 10px 0;
@@ -77,6 +77,9 @@
             .btn-container {
                 button {
                     height: 100%;
+                    &:focus{
+                        box-shadow: none;
+                    }
                 }
             }
         }
@@ -212,7 +215,7 @@
                         outline: none;
 
                         &::after {
-                            margin-left: 1rem;
+                            margin-left: 1.2rem;
                         }
 
                         .filter-option {
@@ -278,6 +281,7 @@
                                     }
 
                                     .text {
+                                        pointer-events: none;
                                         color: #007bff;
                                     }
                                 }
