--- a/PTTWeb/src/assets/scss/index.scss
+++ b/PTTWeb/src/assets/scss/index.scss
@@ -5,4 +5,5 @@
 @import "./login";
 @import "./sidebar-and-main-panel";
 @import "./footer";
-@import "./card"
+@import "./card";
+@import "./modal";
