--- a/PTTWeb/src/assets/scss/card.scss
+++ b/PTTWeb/src/assets/scss/card.scss
@@ -1,9 +1,8 @@
 .card-plain {
     border-radius: 5px;
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05), 0 0 0 1px rgba(63,63,68,.1);
     box-shadow: 0 1px 2px rgba(0,0,0,.05), 0 0 0 1px rgba(63,63,68,.1);
     background-color: #fff;
-    margin-bottom: 0px;
+    min-height: calc(100vh - 180px);
 
     .card-header {
         padding: 10px 0;
@@ -26,11 +25,19 @@
         }
     }
 
+    .card-content.flex {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
     .card-content {
+        min-height: calc(100vh - 230px);
         // project and userprofile
         .widget-row {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             padding: 1.5rem 0;
 
             .input-container {
@@ -76,6 +83,7 @@
             }
 
             .btn-container {
+                margin: 0;
                 button {
                     height: 100%;
                     &:focus{
@@ -314,8 +322,8 @@
             justify-content: center;
             align-content: center;
             img {
-                width: 40vh;
-                height: 40vh;
+                width: 20vw;
+                height: 20vw;
             }
         }
 
@@ -326,16 +334,25 @@
         // report
         .report-title {
             text-align: center;
+            padding: 30px 0 15px 0;
+
+            h4 {
+                margin: 0;
+            }
         }
 
         .form-container {
             padding: 1rem 2rem;
 
+            select:focus {
+                outline: none;
+            }
+
             .btn-container {
                 display: flex;
                 justify-content: center;
-                margin-top: 1rem;
-
+                margin-top: 2rem;
+        
                 button {
                     width: 15rem;
                     &:focus{
