--- a/PTTWeb/src/assets/scss/modal.scss
+++ b/PTTWeb/src/assets/scss/modal.scss
@@ -14,6 +14,8 @@
 
             .modal-title {
                 font-weight: 500;
+                text-align: center;
+                margin: 1rem 0;
             }
 
             .close:focus {
@@ -30,9 +32,39 @@
                 margin-bottom: 1rem;
             }
 
+            .row .time-input {
+                width: 5rem;
+                text-align: center;
+                margin: 0 1rem;
+            }
+
             .row .col {
                 display: flex;
                 align-items: center;
+            }
+
+            .row button {
+                height: 34px;
+            }
+
+            .row select {
+                margin-top: 1rem;
+                display: block;
+                width: 100%;
+                height: calc(1.5em + 0.75rem + 2px);
+                padding: 0.375rem 0.75rem;
+                font-size: 1rem;
+                font-weight: 400;
+                line-height: 1.5;
+                color: #495057;
+                background-color: #fff;
+                background-clip: padding-box;
+                border: 1px solid #ced4da;
+                border-radius: 0.25rem;
+
+                &:focus {
+                    outline: none;
+                }
             }
 
             input {
